# cosmo-engine

./: .travis.yml  CMakeLists.txt  Makefile.emscripten  README.md  appveyor.yml
cmake/: FindSDL2_mixer.cmake
data/: gamecontrollerdb.txt
src/: actor.c  actor.h  actor_collision.c  actor_collision.h  actor_toss.c  actor_toss.h  actor_worktype.c  actor_worktype.h  b800.c  b800.h  b800_font.h  backdrop.c  backdrop.h  cartoon.c  cartoon.h  config.c  config.h  defines.h  demo.c  demo.h  dialog.c  dialog.h  effects.c  effects.h  font.c  font.h  fullscreen_image.c  fullscreen_image.h  game.c  game.h  high_scores.c  high_scores.h  hud.c  hud.h  input.c  input.h  main.c  map.c  map.h  music.c  (+19 more)
src/files/: file.c  file.h  vol.c  vol.h
src/sound/: audio.c  audio.h  music.c  music.h  opl.c  opl.h  sfx.c  sfx.h
